# omegacamer

./: README.md  config.yaml  pyproject.toml  pyproject.yaml  setup.py
omegacamer/: config.yaml  omegacam_downloader.py  reduction_status.py
omegacamer/mosaic/: config.py  database.py  exceptions.py  group_and_link.py  inventory.py  logger.py  make_mosaic.py  make_noisemaps.py  scamp_runner.py  swarp_caller.py  swarp_runner.py  utils.py
omegacamer/mosaic/static_configs/: default.param  default.scamp  default.sex
omegacamer/prered/: __test.py  ccd_overscan.yaml  combine_calibrations.py  config.yaml  database_manager.py  omegacam_downloader.py  pipeline.py  reduction_status.py  utils.py
omegacamer/scripts/: download.py  prered.py
omegacamer/scripts/utils/: make_mask_from_flat.py
